--- a/examples/README.adoc
+++ b/examples/README.adoc
@@ -84,4 +84,4 @@ cd balance
 ./gradlew run --args="wss://cc3-5.kusama.network SENDER_KEY_SEED RECIPIENT_ADDRESS"
 ----
 
-WARNING: If you use on a real network please be aware that it executes the transfer without any additional convirmation from you
+WARNING: If you use on a real network please be aware that it executes the transfer without any additional confirmation from you
