--- a/README.adoc
+++ b/README.adoc
@@ -20,12 +20,14 @@ WARNING: UNDER DEVELOPMENT
 - `io.emeraldpay.polkaj:polkaj-scale:{lib-version}` - SCALE codec implementation
 - `io.emeraldpay.polkaj:polkaj-scale-types:{lib-version}` - SCALE mapping for standard Polkadot types
 - `io.emeraldpay.polkaj:polkaj-schnorrkel:{lib-version}` - Schnorrkel for Java
+- `io.emeraldpay.polkaj:polkaj-schnorrkel-android:{lib-version-dev}` - Schnorrkel for Android
 - `io.emeraldpay.polkaj:polkaj-ss58:{lib-version}` - SS58 codec to encode/decode addresses and pubkeys
 - `io.emeraldpay.polkaj:polkaj-common-types:{lib-version}` - common types (Address, DotAmount, Hash256, etc)
 - `io.emeraldpay.polkaj:polkaj-json-types:{lib-version}` - JSON RPC mapping to Java classes
 - `io.emeraldpay.polkaj:polkaj-api-base:{lib-version}` - RPC base classes
 - `io.emeraldpay.polkaj:polkaj-api-http:{lib-version}` - JSON RPC HTTP client
 - `io.emeraldpay.polkaj:polkaj-api-ws:{lib-version}` - JSON RPC WebSocket client
+- `io.emeraldpay.polkaj:polkaj-api-okhttp:{lib-version-dev}` - JSON RPC and WebSocket client using OkHttp
 - `io.emeraldpay.polkaj:polkaj-tx:{lib-version}` - Storage access and Extrinsics
 
 == Usage
@@ -34,7 +36,7 @@ To use development SNAPSHOT versions you need to install the library into the lo
 
 .Install into local Maven
 ----
-gradle publishToMavenLocal
+./gradlew publishToMavenLocal
 ----
 
 .Using with Gradle
@@ -48,7 +50,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.emeraldpay.polkaj:polkaj-api-http:{lib-version}'
+    implementation 'io.emeraldpay.polkaj:polkaj-api-http:{lib-version-dev}'
 }
 ----
 
@@ -61,7 +63,7 @@ See link:docs/[Documentation] in `./docs` directory, and a demonstration in `./e
 .Show current finalized block
 [source,java]
 ----
-PolkadotHttpApi client = PolkadotApi.newBuilder()
+PolkadotApi client = PolkadotApi.newBuilder()
     .rpcCallAdapter(JavaHttpAdapter.newBuilder().build())
     .build();
 Future<Hash256> hashFuture = client.execute(
